--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Choose Your Colour:</h2>
             <button class="black">Black</button>
             <button class="rainbow">Rainbow</button>
-            <button class="pick-colour">pick a colour</button>
+            <button class="erase">Erase</button>
             <button class="clear">Clear</button>
         </div>
 
